[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scutils"
dynamic = ["version"]

[tool.hatch.version]
path = "scutils/__about__.py"

[tool.pixi.project]
channels = [ "rapidsai-nightly", "conda-forge" ]
platforms = ["linux-64"]

[tool.pixi.system-requirements]
linux="4.18"
cuda = "12.2"

[tool.pixi.dependencies]
rapids = {version = "24.04.*", channel = "rapidsai-nightly"}
python = ">=3.10"
cuda-version = "12.2.*"
cupy = {version = "13.0.*", channel = "conda-forge"}
ucx = {version = "1.15.*", channel = "conda-forge"}
datashader = { version = "0.16.*", channel = "conda-forge"}
libcublas = {version = "12.*", channel = "conda-forge"}
nccl = {version = "2.20.*", channel = "conda-forge"}

[tool.pixi.pypi-dependencies]
# A local path, which installs your project in editable mode.
scutils = { path = ".", editable = true }
rapids-singlecell = "*"

[tool.pixi.tasks]
# A task to run the python module.
#start = "python -c 'from scutils import module; module.hello()'"

